cleaning up OSD elements and adding labels

--- a/src/Views/OSDView/OSDView.css
+++ b/src/Views/OSDView/OSDView.css
@@ -19,3 +19,58 @@
   text-align: center;
   color: white;
   opacity: 0.2; }
+
+.osd-icon {
+  margin-right: 5px;
+  font-size: .8rem; }
+
+.osd-icon-label, .ah_bar {
+  color: whitesmoke;
+  font-weight: bold;
+  letter-spacing: 5px;
+  white-space: nowrap;
+  display: flex;
+  justify-items: center;
+  align-items: center;
+  z-index: 12;
+  cursor: pointer; }
+  .osd-icon-label.craft_name, .craft_name.ah_bar {
+    text-transform: capitalize; }
+  .osd-icon-label .osd-icon, .ah_bar .osd-icon {
+    margin-right: 5px;
+    font-size: .9rem;
+    position: relative;
+    bottom: 2px; }
+  .osd-icon-label .mah, .ah_bar .mah {
+    font-size: .4rem;
+    text-align: center; }
+  .osd-icon-label .compass-bar, .ah_bar .compass-bar {
+    line-height: 10px; }
+
+.ah_sidebar {
+  height: 7rem;
+  width: 15rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  right: 7rem;
+  bottom: 2rem; }
+  .ah_sidebar .ah_sidebar-left,
+  .ah_sidebar .ah_sidebar-right {
+    width: 0.8rem; }
+  .ah_sidebar .ah_sidebar-mid {
+    flex-grow: 1; }
+
+.ah_bar {
+  height: 7rem;
+  width: 9rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  top: 5rem;
+  right: 4rem; }
+  .ah_bar .osd-icon {
+    position: relative;
+    top: 2px; }
