--- a/src/Views/TpaCurveView/TpaCurveItem.css
+++ b/src/Views/TpaCurveView/TpaCurveItem.css
@@ -3,3 +3,9 @@
   display: flex;
   flex: 1;
   padding: 0 !important; }
+
+.tpa-slider-control-slider {
+  height: 80px !important; }
+
+.tpa-slider-control-label {
+  margin-left: 7px !important; }
