--- a/src/Views/TpaCurveView/TpaCurveItem.scss
+++ b/src/Views/TpaCurveView/TpaCurveItem.scss
@@ -4,3 +4,9 @@
   flex: 1;
   padding: 0 !important;
 }
+.tpa-slider-control-slider {
+  height: 80px !important;
+}
+.tpa-slider-control-label {
+  margin-left: 7px !important;
+}
