--- a/src/Views/ConfigListView/ConfigListView.css
+++ b/src/Views/ConfigListView/ConfigListView.css
@@ -8,6 +8,9 @@
   margin: 10px;
   padding: 10px; }
 
+.RACEFLIGHT .config-list-view-sliders {
+  grid-template-columns: repeat(3, 1fr); }
+
 .config-list-view-dropdowns,
 .config-list-view-inputs {
   display: grid;
