fixing ports display, adding blackbox erase button, adding OSD styles for different fonts to aproximate the differences. smaller minimum window size, smaller default window size, remove error about libusb during dfu, adding graph colors for notch and lpfs

--- a/src/Views/OSDView/OSDView.css
+++ b/src/Views/OSDView/OSDView.css
@@ -3,6 +3,24 @@
   font-family: monospace;
   cursor: pointer; }
 
+.digital .osd-element {
+  font-family: sans-serif;
+  font-size: 0.8rem; }
+
+.bold .osd-icon-label, .bold .ah_bar {
+  font-weight: bolder; }
+
+.digital .osd-icon-label, .digital .ah_bar {
+  font-weight: bold;
+  font-style: italic; }
+
+.large .osd-icon-label, .large .ah_bar {
+  font-size: .9rem; }
+
+.extra_large .osd-icon-label, .extra_large .ah_bar {
+  font-size: 1.0rem;
+  font-weight: bold; }
+
 .dropzone-overlay {
   position: absolute;
   top: 0;
