--- a/src/Views/OSDView/OSDView.scss
+++ b/src/Views/OSDView/OSDView.scss
@@ -3,6 +3,34 @@
   font-family: monospace;
   cursor: pointer;
 }
+.digital {
+  .osd-element {
+    font-family: sans-serif;
+    font-size: 0.8rem;
+  }
+}
+.bold {
+  .osd-icon-label {
+    font-weight: bolder;
+  }
+}
+.digital {
+  .osd-icon-label {
+    font-weight: bold;
+    font-style: italic;
+  }
+}
+.large {
+  .osd-icon-label {
+    font-size: 0.9rem;
+  }
+}
+.extra_large {
+  .osd-icon-label {
+    font-size: 1rem;
+    font-weight: bold;
+  }
+}
 .dropzone-overlay {
   position: absolute;
   top: 0;
