--- a/src/Views/OSDView/OSDView.css
+++ b/src/Views/OSDView/OSDView.css
@@ -15,10 +15,10 @@
   font-style: italic; }
 
 .large .osd-icon-label, .large .ah_bar {
-  font-size: .9rem; }
+  font-size: 0.9rem; }
 
 .extra_large .osd-icon-label, .extra_large .ah_bar {
-  font-size: 1.0rem;
+  font-size: 1rem;
   font-weight: bold; }
 
 .dropzone-overlay {
