graph legend for rates, imuf af menu dropdowns. filter fiew optimizations, remove dynamic_filter feature when using imuf

--- a/src/Views/RatesView/RatesView.scss
+++ b/src/Views/RatesView/RatesView.scss
@@ -12,3 +12,16 @@
 }
 .yaw_rate1::after {
 }
+
+.color-legend {
+  &.white {
+    background-color: rgba(255, 255, 255, 0.6);
+    color: black;
+  }
+  &.blue {
+    background-color: rgba(0, 0, 255, 0.3);
+  }
+  &.green {
+    background-color: rgba(0, 255, 0, 0.3);
+  }
+}
