adding labels to charts and fixing colors

--- a/src/Views/RatesView/RatesView.css
+++ b/src/Views/RatesView/RatesView.css
@@ -7,3 +7,7 @@
 
 .color-legend.green {
   background-color: rgba(0, 255, 0, 0.3); }
+
+g text {
+  fill: white;
+  font-family: Roboto, sans-serif; }
