--- a/src/Views/FiltersView/FiltersView.scss
+++ b/src/Views/FiltersView/FiltersView.scss
@@ -19,3 +19,41 @@
 .area-chart-container {
   padding: 20px;
 }
+
+.RACEFLIGHT {
+  .roll_lpf1,
+  .roll_lpf2,
+  .roll_lpf3 {
+    order: 0;
+  }
+  .pitch_lpf1,
+  .pitch_lpf2,
+  .pitch_lpf3 {
+    order: 1;
+  }
+  .yaw_lpf1,
+  .yaw_lpf2,
+  .yaw_lpf3 {
+    order: 2;
+  }
+  .roll_quick1,
+  .roll_quick2,
+  .roll_quick3 {
+    order: 3;
+  }
+  .pitch_quick1,
+  .pitch_quick2,
+  .pitch_quick3 {
+    order: 4;
+  }
+  .yaw_quick1,
+  .yaw_quick2,
+  .yaw_quick3 {
+    order: 5;
+  }
+  .roll_rap1,
+  .roll_rap2,
+  .roll_rap3 {
+    order: 6;
+  }
+}
