add color indicator for when CPU percentage goes above 50 and 60%

--- a/src/App.scss
+++ b/src/App.scss
@@ -20,3 +20,10 @@
   justify-items: flex-start;
   align-items: flex-start;
 }
+
+.warning {
+  background-color: orange;
+}
+.danger {
+  background-color: red;
+}
