--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,9 @@
 .flex-column-start {
   justify-items: flex-start;
   align-items: flex-start; }
+
+.warning {
+  background-color: orange; }
+
+.danger {
+  background-color: red; }
