--- a/src/Views/DfuView/DfuView.scss
+++ b/src/Views/DfuView/DfuView.scss
@@ -7,3 +7,10 @@
   min-height: 100%;
   box-sizing: border-box;
 }
+.dfu-view-root .dfu-select-firmware {
+  font-size: 1.5rem;
+  font-weight: normal;
+  color: white;
+  margin-left: -8px;
+  margin-bottom: -13px;
+}
