updating assistants images and layout, making reversed props show up on the mapping page when reversed is selected

--- a/src/Views/Assistants/RxCalibrationView.scss
+++ b/src/Views/Assistants/RxCalibrationView.scss
@@ -1,5 +1,5 @@
 .rx_assistant_step_1_0 {
-  background-image: url("/assets/receiver_on.jpg");
+  background-image: url("/assets/center_sticks.jpg");
   background-size: cover;
   width: 500px;
   height: 400px;
