--- a/src/Views/Items/SliderView.scss
+++ b/src/Views/Items/SliderView.scss
@@ -18,3 +18,9 @@
 .slider-control-label {
   white-space: nowrap;
 }
+
+.vertical-slider-view {
+  margin: 0 10px;
+  display: flex;
+  flex-direction: column;
+}
