--- a/src/Views/MotorsView/MotorSliders.css
+++ b/src/Views/MotorsView/MotorSliders.css
@@ -1,6 +1,16 @@
 .motor-control-slider {
   height: 80px !important;
-  margin-left: 15px; }
+  margin-left: 30px; }
 
 .motor-control-slider-label {
   margin-left: 13px !important; }
+
+.motor-sliders-view {
+  display: flex;
+  flex: 1;
+  justify-items: center;
+  align-items: center; }
+
+.motor-sliders-input {
+  width: 60px !important;
+  text-align: right; }
