--- a/src/Views/TpaCurveView/TpaCurveItem.css
+++ b/src/Views/TpaCurveView/TpaCurveItem.css
@@ -5,7 +5,8 @@
   padding: 0 !important; }
 
 .tpa-slider-control-slider {
-  height: 80px !important; }
+  height: 80px !important;
+  margin-left: 15px; }
 
 .tpa-slider-control-label {
   margin-left: 7px !important; }
