--- a/src/Views/TpaCurveView/TpaCurveItem.scss
+++ b/src/Views/TpaCurveView/TpaCurveItem.scss
@@ -6,6 +6,7 @@
 }
 .tpa-slider-control-slider {
   height: 80px !important;
+  margin-left: 15px;
 }
 .tpa-slider-control-label {
   margin-left: 7px !important;
