Weekend work save
* Motor assistance fix
* Orientation fix
* Work with PID tab
* Work with FILTER tab
* Work with 3D model representation
* Version changed to 0.1.0
* CLI text color changed

--- a/src/Views/CliView/CliView.css
+++ b/src/Views/CliView/CliView.css
@@ -24,7 +24,7 @@
   font-family: monospace;
   font-size: 14px;
   font-weight: 600;
-  color: orange;
+  color: #0091ff;
   box-sizing: border-box;
   user-select: text;
   white-space: pre-wrap;
