--- a/src/Views/CliView/CliView.scss
+++ b/src/Views/CliView/CliView.scss
@@ -26,7 +26,7 @@
   font-family: monospace;
   font-size: 14px;
   font-weight: 600;
-  color: orange;
+  color: rgb(0, 145, 255);
   box-sizing: border-box;
   user-select: text;
   white-space: pre-wrap;
