--- a/src/Views/DfuView/DfuView.css
+++ b/src/Views/DfuView/DfuView.css
@@ -14,7 +14,5 @@
   margin-left: -8px;
   margin-bottom: -10px; }
 
-.dfu-view-root a
-{
-  color: #4dd0e1;
-}
+.dfu-view-root a {
+  color: #4dd0e1; }
