--- a/src/Views/Connected.css
+++ b/src/Views/Connected.css
@@ -7,3 +7,6 @@
   padding: 100px 0 0 0 !important;
   min-height: 100%;
   box-sizing: border-box; }
+  @media (min-width: 576px) {
+    .connected-root {
+      margin-left: 240px !important; } }
