--- a/src/Views/Connected.scss
+++ b/src/Views/Connected.scss
@@ -7,4 +7,7 @@
   padding: 100px 0 0 0 !important;
   min-height: 100%;
   box-sizing: border-box;
+  @media (min-width: "576px") {
+    margin-left: 240px !important;
+  }
 }
