--- a/src/App.css
+++ b/src/App.css
@@ -40,3 +40,7 @@
   .notification-modal h6 {
     color: black;
     margin-bottom: 0; }
+
+@font-face {
+  font-family: 'altehaasgroteskregular';
+  src: url("./Themes/altehaasgroteskregular.ttf"); }
