--- a/src/App.scss
+++ b/src/App.scss
@@ -51,3 +51,8 @@
     margin-bottom: 0;
   }
 }
+
+@font-face {
+  font-family: 'altehaasgroteskregular';
+  src: url('./Themes/altehaasgroteskregular.ttf');
+}
