set hero background as test

--- a/src/App.css
+++ b/src/App.css
@@ -42,5 +42,5 @@
     margin-bottom: 0; }
 
 @font-face {
-  font-family: 'altehaasgroteskregular';
+  font-family: "altehaasgroteskregular";
   src: url("./Themes/altehaasgroteskregular.ttf"); }
