--- a/src/App.scss
+++ b/src/App.scss
@@ -53,6 +53,6 @@
 }
 
 @font-face {
-  font-family: 'altehaasgroteskregular';
-  src: url('./Themes/altehaasgroteskregular.ttf');
+  font-family: "altehaasgroteskregular";
+  src: url("./Themes/altehaasgroteskregular.ttf");
 }
