--- a/src/Views/Connected.css
+++ b/src/Views/Connected.css
@@ -11,3 +11,6 @@
   @media (min-width: 576px) {
     .connected-root {
       margin-left: 240px !important; } }
+
+.MuiDrawer-paper {
+  border-right: 0 !important; }
