--- a/src/Views/FiltersView/FiltersView.css
+++ b/src/Views/FiltersView/FiltersView.css
@@ -1,4 +1,8 @@
 .filters-view {
+  height: 100%;
+  width: 100%;
+  overflow-y: auto;
+  position: absolute;
   display: flex;
   flex-direction: column; }
   .filters-view g.x.axis text {
