--- a/src/Views/FiltersView/FiltersView.scss
+++ b/src/Views/FiltersView/FiltersView.scss
@@ -1,4 +1,8 @@
 .filters-view {
+  height: 100%;
+  width: 100%;
+  overflow-y: auto;
+  position: absolute;
   display: flex;
   flex-direction: column;
   g.x.axis text {
