--- a/src/Views/PidView/PidView.css
+++ b/src/Views/PidView/PidView.css
@@ -1,5 +1,9 @@
 .pid-view {
-  flex-basis: 100%; }
+  flex-basis: 100%;
+  height: 100%;
+  width: 100%;
+  overflow-y: auto;
+  position: absolute; }
   .pid-view .config-list-view {
     display: grid; }
 
