--- a/src/Views/PidView/PidView.scss
+++ b/src/Views/PidView/PidView.scss
@@ -3,6 +3,10 @@
     display: grid;
   }
   flex-basis: 100%;
+  height: 100%;
+  width: 100%;
+  overflow-y: auto;
+  position: absolute;
 }
 .config-list-view-sliders {
   .p_roll,
