--- a/src/Views/RatesView/RatesView.css
+++ b/src/Views/RatesView/RatesView.css
@@ -9,6 +9,10 @@
   background-color: rgba(0, 255, 0, 0.3); }
 
 .rates-view {
+  height: 100%;
+  width: 100%;
+  overflow-y: auto;
+  position: absolute;
   display: flex;
   flex: 1;
   flex-direction: column; }
