functional aux sliders

--- a/src/Views/AuxChannelView/NewAuxChannelView.scss
+++ b/src/Views/AuxChannelView/NewAuxChannelView.scss
@@ -21,3 +21,23 @@
 .details {
   align-items: "center";
 }
+
+.MuiSlider-rail,
+.MuiSlider-track,
+.MuiSlider-mark {
+  height: 10px !important;
+}
+
+.MuiSlider-thumb {
+  height: 20px !important;
+  width: 20px !important;
+  margin-left: -10px !important;
+}
+
+.MuiSlider-valueLabel {
+  left: calc(-50% - -4px) !important;
+}
+
+.MuiSlider-root {
+  margin-top: 27px !important;
+}
