add tooltips to buttons

--- a/src/Views/AuxChannelView/NewAuxChannelView.css
+++ b/src/Views/AuxChannelView/NewAuxChannelView.css
@@ -16,7 +16,9 @@
 .details {
   align-items: "center"; }
 
-.MuiSlider-rail, .MuiSlider-track, .MuiSlider-mark {
+.MuiSlider-rail,
+.MuiSlider-track,
+.MuiSlider-mark {
   height: 10px !important; }
 
 .MuiSlider-thumb {
