--- a/src/Views/AuxChannelView/NewAuxModeView.scss
+++ b/src/Views/AuxChannelView/NewAuxModeView.scss
@@ -41,3 +41,10 @@
 .MuiSlider-root {
   margin-top: 27px !important;
 }
+
+.modes-view {
+  height: 100%;
+  width: 100%;
+  overflow-y: auto;
+  position: absolute;
+}
