--- a/src/Views/PidView/PidView.css
+++ b/src/Views/PidView/PidView.css
@@ -1,9 +1,8 @@
 .pid-view {
   flex-basis: 100%;
-  height: 100%;
+  height: 90%;
   width: 100%;
-  overflow-y: auto;
-  position: absolute; }
+  overflow-y: auto; }
   .pid-view .config-list-view {
     display: grid; }
 
