Allow advanced tab to be scrollable

--- a/src/Views/ConfigListView/ConfigListView.scss
+++ b/src/Views/ConfigListView/ConfigListView.scss
@@ -1,6 +1,10 @@
 .config-list-view {
   margin: 10px;
   padding: 10px;
+  height: 90%;
+  width: 100%;
+  overflow-y: auto;
+  position: absolute;
 }
 .config-list-view-sliders {
   display: grid;
