--- a/src/Views/PidView/PidView.css
+++ b/src/Views/PidView/PidView.css
@@ -1,8 +1,10 @@
 .pid-view {
   flex-basis: 100%;
-  height: 90%;
+  height: 80%;
   width: 100%;
-  overflow-y: auto; }
+  overflow-y: auto;
+  position: absolute;
+  margin-top: 10%; }
   .pid-view .config-list-view {
     display: grid; }
 
