--- a/src/Views/PidView/PidView.scss
+++ b/src/Views/PidView/PidView.scss
@@ -3,9 +3,11 @@
     display: grid;
   }
   flex-basis: 100%;
-  height: 90%;
+  height: 80%;
   width: 100%;
   overflow-y: auto;
+  position: absolute;
+  margin-top: 10%;
 }
 .config-list-view-sliders {
   .p_roll,
